Small amount of cleanup for JDBC code
Mostly formatting and renaming of variables.

Signed-off-by: Arjan Tijms <arjan.tijms@gmail.com>